# halite-bot

./: .gitignore  BehaviorTree.h  CMakeLists.txt  DropoffShipAi.h  MyBot.cpp  ShipAI.h  Util.h  make.bat  run_game.sh
include/: behavior_tree.hpp  dropoff_ship_ai.hpp  move_manager.hpp  ship_ai.hpp  ship_ai_v2.hpp  shipyard_ai.hpp  spot_manager.hpp  unit_manager.hpp  util.hpp  weighted_picker.hpp
include/manager/: move_manager.hpp  spot_manager.hpp  unit_manager.hpp
src/: dropoff_ship_ai.cpp  move_manager.cpp  ship_ai.cpp  ship_ai_v2.cpp  shipyard_ai.cpp  spot_manager.cpp  unit_manager.cpp
src/manager/: move_manager.cpp  spot_manager.cpp  unit_manager.cpp
